--- a/package.json
+++ b/package.json
@@ -9,16 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/carousel": "^7.5.3",
+    "@mantine/charts": "^7.5.3",
+    "@mantine/code-highlight": "^7.5.3",
+    "@mantine/core": "^7.5.3",
+    "@mantine/dates": "^7.5.3",
+    "@mantine/dropzone": "^7.5.3",
+    "@mantine/form": "^7.5.3",
+    "@mantine/hooks": "^7.5.3",
+    "@mantine/modals": "^7.5.3",
+    "@mantine/notifications": "^7.5.3",
+    "@mantine/nprogress": "^7.5.3",
+    "@mantine/spotlight": "^7.5.3",
+    "@mantine/tiptap": "^7.5.3",
+    "@tabler/icons-react": "^2.47.0",
+    "@tiptap/extension-link": "^2.2.3",
+    "@tiptap/react": "^2.2.3",
+    "@tiptap/starter-kit": "^2.2.3",
+    "dayjs": "^1.11.10",
+    "embla-carousel-react": "^7.1.0",
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "recharts": "^2.12.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.35",
+    "postcss-preset-mantine": "^1.13.0",
+    "postcss-simple-vars": "^7.0.1",
+    "typescript": "^5"
   }
 }
